<resources>

    <!-- GENERAL -->
    <string name="app_name">DiversLogBook</string>
    <string name="title_activity_login">Sign in</string>
    <string name="Oauth2_client_secret">1014277544390-j75qgr3hr04es2viltvcidti0ao0qv6r.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="meters">meters</string>
    <string name="minutes">minutes</string>
    <string name="minutes_short">m</string>
    <string name="hours">hours</string>
    <string name="hours_short">h</string>
    <string name="h_and_m">h : m</string>
    <string name="choose">Choose</string>
    <string name="edit">Edit</string>
    <string name="liters">liters</string>
    <string name="bar">bar</string>
    <string name="degrees">degrees</string>
    <string name="more24">24h +</string>
    <string name="hashtag">#</string>
    <string name="depth">depth</string>
    <string name="duration">duration</string>


    <!-- Strings related to login -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login_text">Sign in</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_oauth_login_hint">Login with an existing external account:</string>

    <!-- This is for the language ListPreference in preferences.xml -->
    <string name="preferences_languageTitle">Language</string>
    <string name="preferences_languageSummary">Language to use in the application.</string>
    <string name="preferences_languageDefault">EN</string>
    <string name="preferences_activityTitle">Preferences</string>
    <string name="preferences_diveNumber">startNumber</string>

    <string-array name="preferences_language">
        <item>English</item>
        <item>Norwegian</item>
    </string-array>

    <string-array name="preferences_languageValues">
        <item>EN</item>
        <item>NO</item>
    </string-array>


    <!-- This is for the measurement units ListPreference in preferences.xml -->
    <string name="preferences_measurementTitle">Measurement units</string>
    <string name="preferences_measurementSummary">Measurement units to use in the application.</string>
    <string name="preferences_measurementDefault">metric</string>

    <string-array name="preferences_measurement">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="preferences_measurementValues">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- This is for the rescue buffer time ListPreference in preferences.xml -->
    <string name="preferences_bufferTitle">Rescue buffer time</string>
    <string name="preferences_bufferSummary">Time from timer runs out to a rescue team should be called.</string>
    <string name="preferences_bufferDefault">180</string>

    <!-- minutes -->
    <string-array name="preferences_buffer">
        <item>1 min</item>
        <item>2 min</item>
        <item>3 min</item>
        <item>4 min</item>
        <item>5 min</item>
        <item>6 min</item>
        <item>7 min</item>
        <item>8 min</item>
        <item>9 min</item>
        <item>10 min</item>
    </string-array>

    <!-- given in seconds. -->
    <string-array name="preferences_bufferValues">
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
        <item>360</item>
        <item>420</item>
        <item>480</item>
        <item>540</item>
        <item>600</item>
    </string-array>


    <!-- This is for the dive table ListPreference in preferences.xml -->
    <string name="preferences_tableTitle">Dive table</string>
    <string name="preferences_tableSummary">Table standard to use in the application.</string>
    <string name="preferences_tableDefault">PADI</string>
    <string name="preferences_logoutTitle">Log out</string>
    <string name="preferences_logoutSummary">Logs you out of the application.</string>
    <string name="preferences_key_logout">logout</string>

    <string-array name="preferences_table">
        <item>PADI</item>
        <item>NDF</item>
    </string-array>

    <string-array name="preferences_tableValues">
        <item>PADI</item>
        <item>NDF</item>
    </string-array>

    <string name="preferences_dive_number">Dive start number</string>
    <string name="preferences_dive_number_summary">Start counting dives from another number than 1</string>
    <string name="preferences_dive_number_default_value">1</string>

    <!-- PROFILE TAB -->
    <string name="profile_default_name">Unknown</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_email_default_value">someone@example.com</string>
    <string name="profile_phone_label">Phonenumber:</string>
    <string name="profile_phone_default_value">+47 123 45 678</string>

    <!-- PLAN TAB -->
    <string name="plan_title">Plan your dive</string>
    <string name="plan_date">Date:</string>
    <string name="plan_date_hint">dd/mm/yyyy</string>
    <string name="plan_buddy">Diving buddy:</string>
    <string name="plan_buddy_input">Start writing name of buddy..</string>
    <string name="plan_guard">Surface guard:</string>
    <string name="plan_guard_input">Start writing name of guard..</string>
    <string name="plan_location">Location:</string>
    <string name="plan_location_input">Start writing name of location..</string>
    <string name="plan_dive_type">Type of dive:</string>

    <string-array name="plan_dive_type_input">
        <item>Photography</item>
        <item>Recreation</item>
        <item>Search and rescue</item>
        <item>Work</item>
    </string-array>

    <string name="dive_role_diver_button_text">Diver</string>
    <string name="dive_role_surface_guard_button_text">Surface Guard</string>
    <string name="profile_image_description">The divers profile image</string>

    <string-array name="plan_dive_type_input_values">
        <item>photo</item>
        <item>recreation</item>
        <item>search</item>
        <item>work</item>
    </string-array>

    <string name="plan_depth">Planned depth:</string>
    <string name="plan_planned_time">Planned diving time:</string>
    <string name="plan_security_stops">Security stops:</string>
    <string name="plan_tank_size">Tank size:</string>
    <string name="plan_start_tank_pressure">Tank pressure:</string>
    <string name="plan_dive_gas">Dive gas:</string>

    <string-array name="plan_dive_gas_input">
        <item>Air</item>
        <item>Nitrox</item>
    </string-array>

    <string name="plan_fo2">F02:</string>
    <string name="plan_o2_percent">O2%:</string>
    <string name="plan_weather">Weather:</string>

    <string-array name="plan_weather_input">
        <item>Clear</item>
        <item>Rain</item>
        <item>Storm</item>
        <item>Cloudy</item>
    </string-array>

    <string name="plan_tempSurface">Temperature on surface:</string>
    <string name="plan_tempWater">Temperature in water:</string>
    <string name="plan_lastDive">Time since last dive:</string>
    <string name="plan_lastAlcohol">Time since last alcohol intake:</string>
    <string name="plan_notes">Notes:</string>
    <string name="plan_notes_hint">Optional notes..</string>
    <string name="create_plan">Create plan</string>
    <string name="finish_plan">Update plan after dive</string>
    <string name="plan_finish_button">Update plan</string>

    <string name="plan_security_stops_title">Security stops</string>
    <string name="plan_stops_depth_title">Depth in meters</string>
    <string name="plan_stops_duration_min">Duration in minutes</string>
    <string name="plan_save_stops">Save security stops</string>
    <string name="plan_stops_new">Add new stop</string>
    <string name="plan_stops_remove">Remove last stop</string>

    <string name="plan_success">Your diving plan was successfully saved!</string>
    <string name="plan_finish_success">Success! Your diving log is now finished.</string>
    <string name="plan_error">Error! Check your inputs again and verify that your inputs are correct.</string>

    <string name="plan_current">Current in water:</string>
    <string-array name="plan_current_input">
        <item>None</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Strong</item>
    </string-array>

    <string name="plan_actual_depth">Actual depth:</string>
    <string name="plan_end_tank_pressure">Tank pressure now:</string>


    <!--  DISPLAYLOGACTIVITY XML  -->
    <string name="displaylog_date">Date</string>
    <string name="displaylog_surfaceGuard">Surface guard:</string>
    <string name="displaylog_diveBuddy">Dive buddy:</string>
    <string name="displaylog_diveType">Dive type:</string>
    <string name="displaylog_plannedDepth">Planned depth:</string>
    <string name="displaylog_actualDepth">Actual depth:</string>
    <string name="displaylog_tsld">S:I :</string>
    <string name="displaylog_tslai">Last alcohol intake:</string>
    <string name="displaylog_securityStops">Security stops:</string>
    <string name="displaylog_plannedDiveTime">Planned dive time:</string>
    <string name="displaylog_actualDiveTime">Actual dive time:</string>
    <string name="displaylog_tankSize">Tank size:</string>
    <string name="displaylog_startTankPressure">Start tank pressure:</string>
    <string name="displaylog_endTankPressure">End tank pressure:</string>
    <string name="displaylog_usedTankPressure">Used tank pressure:</string>
    <string name="displaylog_saturation">Saturation:</string>
    <string name="displaylog_diveGas">Dive gas:</string>
    <string name="displaylog_weather">Weather:</string>
    <string name="displaylog_surfaceTemp">Surface Temperature:</string>
    <string name="displaylog_waterTemp">Water Temperature:</string>
    <string name="displaylog_current">Current:</string>
    <string name="displaylog_notes">Notes:</string>

    <!--  DISPLAYLOGACTIVITY  -->
    <string name="displayloga_meters">meters</string>
    <string name="displayloga_hourShort">h.</string>
    <string name="displayloga_minuteShort">min.</string>
    <string name="displayloga_stopDuration">minutes at</string>
    <string name="displayloga_minutes">minutes</string>
    <string name="displayloga_bar">bar</string>
    <string name="displayloga_litrePerMinute">l/min</string>
    <string name="displayloga_litre">litre</string>
    <string name="displayloga_celcius">°C</string>
    <string name="displayloga_fahrenheit">°F</string>





</resources>
