<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecurityStops">

    <TableLayout
        android:id="@+id/stopTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hashtag"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView23"
                android:layout_weight="1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plan_stops_depth_title"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_weight="1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plan_stops_duration_min"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/remove"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/danger"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:text="@string/plan_stops_remove" />

        <Button
            android:id="@+id/addStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/success"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:text="@string/plan_stops_new" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/saveStops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/plan_save_stops"
            android:textColor="@color/white"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal|center"/>


    </LinearLayout>

</LinearLayout>